Bugs resolution